[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/arena.gd" type="Script" id=1]
[ext_resource path="res://map/arena.obj" type="ArrayMesh" id=2]
[ext_resource path="res://map/nets.obj" type="ArrayMesh" id=3]

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -50, 0, -50, -50, 0, 50, 50, 0, -50, 50, 0, 50 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -24.0562, -1.23742, -33.8494, 24.3758, 1.13675, 34.0517, -24.0562, 1.13675, 34.0517, 24.3758, -1.23742, 34.0517, 24.3758, 1.13675, -33.8494, -24.0562, -1.23742, 34.0517, -24.0562, 1.13675, -33.8494, 24.3758, -1.23742, -33.8494 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 23.7765, 6.96669, 11.3486 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_vertex_lighting = true

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.133333, 0.435294, 0, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.501961, 0.223529, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[node name="arena" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135193, 0 )
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="side_team_1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.82 )
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="side_team_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.54568, 0 )
shape = SubResource( 7 )

[node name="side_team_2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20.8599 )
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="side_team_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.54568, 0 )
shape = SubResource( 7 )

[node name="arena" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="grass" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135193, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="net" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.1955, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 8 )
material/1 = SubResource( 9 )

[connection signal="body_entered" from="side_team_1" to="." method="_on_side_team_1_body_entered"]
[connection signal="body_exited" from="side_team_1" to="." method="_on_side_team_1_body_exited"]
[connection signal="body_entered" from="side_team_2" to="." method="_on_side_team_2_body_entered"]
[connection signal="body_exited" from="side_team_2" to="." method="_on_side_team_2_body_exited"]
